<resources>
    <string name="app_name">Cqueue</string>

    <string name="table_week_one">第1周</string>
    <string name="table_header_week_1">周一</string>
    <string name="table_header_week_2">周二</string>
    <string name="table_header_week_3">周三</string>
    <string name="table_header_week_4">周四</string>
    <string name="table_header_week_5">周五</string>
    <string name="table_header_week_6">周六</string>
    <string name="table_header_week_7">周日</string>

    <string name="state_loading">正在加载…</string>
    <string name="state_no_exams">暂无考试信息</string>
    <string name="state_request_error">请求出错，点击重试</string>
    <string name="state_no_grade">暂无成绩信息</string>
    <string name="state_no_table">暂无课表信息</string>

    <string name="login_stunum_hint">学号</string>
    <string name="login_pass_hint">教务网密码</string>
    <string name="login">登录</string>
    <string name="login_error_input_pass">请输入密码</string>
    <string name="login_error_shorter_6">密码不能少于6位</string>
    <string name="login_error_longer_16">密码不能大于16位</string>
    <string name="login_error_input_stunum">请输入学号</string>
    <string name="login_error_stunum_too_short">学号太短了！</string>
    <string name="login_error_stunum_too_long">学号太长了！</string>
    <string name="login_error_num_only">学号只能包含数字</string>

    <string name="course_detail_item_teacher">%s（任课教师）</string>
    <string name="course_detail_item_time">第%d周 %s %d-%d节（上课时间）</string>
    <string name="course_detail_item_classroom">%s（上课地点）</string>
    <string name="course_detail_item_credit">%s（学分）</string>
    <string name="course_detail_item_hours_all">%s（总学时）</string>
    <string name="grade_gpa_text">GPA: %s</string>
    <string name="exams_item_seat">座位号：%s</string>
    <string name="cancel">取消</string>
    <string name="reload">重新导入</string>
    <string name="table_reload_confirm">确定要重新导入课表吗？</string>
    <string name="table_reload_confirm_title">提示</string>
    <string name="logout">登出</string>
    <string name="menu_search_courses">课程检索</string>
    <string name="menu_exams">考试</string>
    <string name="menu_grade">成绩</string>
    <string name="menu_reload_table">重新导入课表</string>
    <string name="menu_logout">登出</string>
    <string name="menu_theme">主题</string>
    <string name="menu_about">关于</string>
    <string name="label_grade">成绩</string>
    <string name="label_exams">考试</string>
    <string name="label_about">关于Cqueue</string>

    <string name="about_header_support">支持一下</string>
    <string name="about_item_like">喜欢</string>
    <string name="about_item_donate">捐赠</string>
    <string name="about_header_contact">联系我们</string>
    <string name="about_item_trello">开发计划</string>
    <string name="about_item_feedback">一句话建议</string>
    <string name="about_item_qq_group">QQ交流群</string>
    <string name="about_item_mail">邮箱</string>
    <string name="about_item_github">Github主页</string>
    <string name="about_header_os_license">开源许可协议</string>
    <string name="about_des_donate">使用支付宝捐赠</string>
    <string name="about_snack_no_alipay">还没安装支付宝哦</string>
    <string name="about_item_update">检查更新</string>
    <string name="about_no_update">当前已是最新版本</string>
    <string name="about_action_update">更新</string>
    <string name="about_des_feedback">帮助我努力做得更好！</string>
    <string name="about_dialog_title_feedback">建议</string>
    <string name="about_dialog_post_feedback">提交</string>
    <string name="feedback_snack_success">反馈成功</string>
    <string name="search_hint">课程关键字…</string>

</resources>
