<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search_courses"
        android:title="@string/menu_search_courses"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/action_exams"
        android:title="@string/menu_exams"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_grade"
        android:title="@string/menu_grade"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_theme"
        android:title="@string/menu_theme"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh_table"
        android:title="@string/menu_reload_table"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
</menu>