<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.andreamapp.cqu.login.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="?attr/hintTextColor"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="12dp" >

                <EditText
                    android:id="@+id/login_student_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_stunum_hint"
                    android:maxLines="1"
                    android:textColor="?attr/foreTextColor"
                    android:textColorHint="?attr/hintTextColor"
                    android:inputType="numberDecimal"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="?attr/hintTextColor"
                android:backgroundTint="#ffffff"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="12dp" >

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_pass_hint"
                    android:inputType="textPassword"
                    android:textColor="?attr/foreTextColor"
                    android:textColorHint="?attr/hintTextColor"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/login"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
